...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_dn_hname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/iv_dn_avatar"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:padding="10dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/iv_dn_isfav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="16dp"
...
